...
                                                    <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="LikeButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JoP-dn-viU" userLabel="LikeButton">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeDefault"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="SH3-9y-Upl" eventType="touchUpInside" id="d4C-oW-SuB"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <color key="backgroundColor" name="YP Black"/>
...
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="OJ6-LQ-LOt"/>
                                    <constraint firstAttribute="height" constant="48" id="yiK-Bp-iWE"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="backButtonTapped" destination="zIt-cP-F3a" eventType="touchUpInside" id="vOJ-xX-KMN"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="LT1-DL-PMV"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="pky-vn-1nm" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="hKp-Ba-dKK">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="ChR-Ae-ODj" userLabel="UnsplashWebView">
                                <rect key="frame" x="20" y="48" width="374" height="814"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
