...
    
    func deleteCash() {
        ExitAccountService.shared.clean()
    }
    
    func showAlert() -> UIAlertController {
        let alertViewController = UIAlertController(title: "Пока, пока!",
                                                    message: "Уверены что хотите выйти?", preferredStyle: .alert)
        let actionNet = UIAlertAction(title: "Нет", style: .default) { _ in
            alertViewController.dismiss(animated: true)
        }
        let actionDa = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            guard let self = self else {return}
            self.exitAccount()
        }
        alertViewController.addAction(actionDa)
        alertViewController.addAction(actionNet)
        return alertViewController
...
